# skill-review

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PAUSE.md  README.md  justfile
.skillsmith/projects/demo/: config.toml  skill.md
.skillsmith/projects/ocr-job-api/: config.toml  skill.md
.skillsmith/projects/ocr-job-domain/: config.toml  skill.md
.skillsmith/projects/ocr-job-scenario/: config.toml  skill.md
.skillsmith/projects/react-demo/: .last-run  config.toml  results.json  skill.md
assets/demo/: config.toml
assets/demo/fixture/: format.py  strings.py  test_format.py  test_strings.py
plugins/: README.md
plugins/gemini/: skillsmith.toml
plugins/skillsmith/: README.md
plugins/skillsmith/.agents/plugins/: marketplace.json
plugins/skillsmith/.claude-plugin/: marketplace.json  plugin.json
plugins/skillsmith/.codex-plugin/: plugin.json
plugins/skillsmith/commands/: skillsmith.md
plugins/skillsmith/skills/skillsmith/: SKILL.md
src/: agent.rs  bench.rs  config.rs  deploy.rs  eval.rs  judge.rs  lib.rs  llm.rs  main.rs  obs.rs  optimize.rs  report.rs  results.rs  seed.rs  worktree.rs
tests/: core.rs
